--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-link-http": "1.5.17",
     "cookie": "^0.4.1",
     "currency.js": "^1.2.2",
+    "firebase": "^7.15.5",
     "formik": "^2.1.4",
     "graphql": "^15.1.0",
     "graphql-tag": "2.10.3",
